--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,9 @@ nav a {
   color: white;
   font-size: 1rem;
 }
+nav a:hover {
+  color: grey;
+}
 
 /* header */
 header {
@@ -110,15 +113,22 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 .menu-item > * {
   padding: 2px;
+}
+.menu-item h2 {
+  border-bottom: 1px solid white;
+  margin-bottom: 10px;
 }
 .menu-item img {
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  padding: 0 10px;
 }
 .menu-item p {
   text-align: center;
+  min-height: 50px;
 }
