--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 :root {
-  --background-blur-color: rgba(0, 0, 0, 0.63);
+  --background-blur-color: rgba(0, 0, 0, 0.742);
   --accent-color: rgb(0, 0, 0);
 }
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400;500;600&display=swap");
@@ -12,13 +12,12 @@
 /* template */
 body {
   display: grid;
-
-  grid-template: 60px 80px 1fr 40px / 1fr;
-  height: 100vh;
   background-image: url("/src/lofi-bg.jpg");
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
+  grid-template: 60px 80px 1fr 40px / 1fr;
+  height: 100vh;
   font-family: "Bai Jamjuree", sans-serif;
 }
 
@@ -27,35 +26,38 @@ nav ul {
   height: 100%;
   text-align: center;
   justify-content: center;
-  background-color: var(--accent-color);
+  background-color: white;
+  border-bottom: 1px solid rgba(180, 180, 180, 0.303);
 }
 nav li {
   flex: 1;
-  max-width: 400px;
+  max-width: 200px;
   align-self: center;
   list-style: none;
 }
 nav a {
   text-decoration: none;
-  color: white;
-  font-size: 1rem;
+  color: black;
+  font-size: 1.1rem;
 }
-nav a:hover {
-  color: grey;
+nav ul .active,
+nav li a:hover {
+  color: rgb(170, 169, 169);
 }
 
 /* header */
 header {
-  background-color: var(--background-blur-color);
-  backdrop-filter: blur(5px);
   padding: 20px;
   width: 100vw;
   height: 100%;
   font-size: 1.2rem;
   font-weight: 600;
-  color: white;
+  background-color: white;
+  color: black;
   display: grid;
   place-content: center;
+  text-align: center;
+  border-bottom: 1px solid rgba(180, 180, 180, 0.303);
 }
 
 header .first-word {
@@ -67,48 +69,53 @@ header .second-word {
 /* footer */
 footer {
   height: 100%;
-  background-color: var(--accent-color);
-  color: rgba(255, 255, 255, 0.589);
+  background-color: white;
+  color: black;
   font-size: 0.8rem;
   display: grid;
   place-items: center;
 }
 
 /* home page */
-
-.vid-container {
+.home-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.home-container > * {
+  flex: 1;
+}
+.left-half {
+  background-image: url("storefront.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.right-half {
+  background-color: var(--background-blur-color);
+  backdrop-filter: blur(10px);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
-  padding: 80px 30px;
-  max-width: 900px;
-  gap: 1.3rem;
-  margin: auto;
-}
-.video {
-  width: 100%;
-  height: 100%;
-}
-.home-desc {
-  background-color: var(--background-blur-color);
+  gap: 3rem;
   color: white;
-  font-size: 1.5rem;
-  border-radius: 10px;
-  text-align: center;
+  padding: 0 40px;
 }
 
+.home-logo {
+  width: 50%;
+  align-self: center;
+}
 /* menu content */
 .menu-container {
   display: grid;
-  height: 100%;
+
   width: 80%;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(300px, 100px));
   gap: 1.3rem;
-
   color: white;
-  margin: 1.3rem auto;
+  margin: 65px auto;
 }
 .menu-item {
   background-color: var(--background-blur-color);
@@ -125,18 +132,25 @@ footer {
   padding: 2px;
 }
 .menu-item h2 {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid orangered;
   margin-bottom: 10px;
 }
 .menu-item img {
   width: 200px;
-  height: 200px;
+  height: 127px;
   border-radius: 50%;
   padding: 0 10px;
 }
 .menu-item p {
   text-align: center;
   min-height: 50px;
+}
+.menu-price {
+  font-size: 1.1rem;
+  font-weight: 600;
+  border-top: 1px solid orangered;
+  margin-top: 8px;
+  letter-spacing: 0.1rem;
 }
 
 /* contact */
