--- a/src/contact.css
+++ b/src/contact.css
@@ -31,8 +31,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2.4rem;
-  height: 17vh;
+  font-size: 2.9rem;
+  height: 15vh;
+  background: rgb(236, 208, 180);
+  background: linear-gradient(
+    90deg,
+    rgba(236, 208, 180, 1) 0%,
+    rgba(235, 149, 73, 0.6619690112373074) 52%,
+    rgba(255, 218, 181, 1) 100%
+  );
 }
 
 .social-media {
@@ -61,7 +68,7 @@
 
 .contact-type {
   display: flex;
-  margin: 2% 40px;
+  margin: 4% 40px;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -90,16 +97,32 @@
   font-size: 5rem;
   color: #eb9549;
 }
-.contact-type button {
-  border: none;
-  outline: none;
-  background-color: #eb9549;
-  color: white;
-  font-size: 1.1rem;
-  padding: 10px 18px;
-  border-radius: 10px;
-  font-weight: 600;
+#leave-comment-btn {
+  box-shadow: inset 0px 1px 0px 0px #fce2c1;
+  background: linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
+  background-color: #ffc477;
+  border-radius: 6px;
+  border: 1px solid #eeb44f;
+  display: inline-block;
   cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #cc9f52;
+}
+.click-here {
+  border-bottom: 1px solid #9a7a4a;
+}
+#leave-comment-btn:hover {
+  background: linear-gradient(to bottom, #fb9e25 5%, #ffc477 100%);
+  background-color: #fb9e25;
+}
+#leave-comment-btn:active {
+  position: relative;
+  top: 1px;
 }
 
 .sign-up {
@@ -123,16 +146,29 @@
   padding-left: 9px;
   font-size: 1.2rem;
 }
-.sign-up-btn {
+
+#sign-up-btn {
+  box-shadow: inset 0px 1px 0px 0px #fce2c1;
   margin-top: 20px;
-  height: 27px;
-  width: 120px;
-  border: none;
-  outline: none;
-  background-color: #eb9549;
-  color: white;
-  font-size: 1.1rem;
-  border-radius: 8px;
-  font-weight: 600;
+  background: linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
+  background-color: #ffc477;
+  border-radius: 6px;
+  border: 1px solid #eeb44f;
+  display: inline-block;
   cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #cc9f52;
+}
+#sign-up-btn:hover {
+  background: linear-gradient(to bottom, #fb9e25 5%, #ffc477 100%);
+  background-color: #fb9e25;
+}
+#sign-up-btn:active {
+  position: relative;
+  top: 1px;
 }
