--- a/src/form.css
+++ b/src/form.css
@@ -228,22 +228,34 @@ input[type="date"] {
 
 /* submit button */
 
-.submit-btn {
-  min-width: 150px;
-  margin: auto;
-  background-color: #eb9549;
-  border: none;
-  border-radius: 10px;
-  color: white;
-  font-size: 1.3rem;
-  font-weight: 600;
-  padding: 4px;
+.submit-form-btn {
+  align-self: center;
+  text-align: center;
+  width: 150px;
+  box-shadow: inset 0px 1px 0px 0px #fce2c1;
+  background: linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
+  background-color: #ffc477;
+  border-radius: 6px;
+  border: 1px solid #eeb44f;
+  display: inline-block;
   cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #cc9f52;
   transition: all 300ms;
 }
-.submit-btn:hover {
-  background-color: #eb9549b6;
+.submit-form-btn:hover {
+  background: linear-gradient(to bottom, #fb9e25 5%, #ffc477 100%);
+  background-color: #fb9e25;
   transform: scale(1.05);
+}
+.submit-form-btn:active {
+  position: relative;
+  top: 1px;
 }
 
 @media (max-width: 1240px) {
