--- a/src/home.css
+++ b/src/home.css
@@ -14,41 +14,78 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap");
 
 /* home page */
-.home-container {
-  width: 100%;
+.home-wrapper {
+  background: rgb(239, 214, 186);
+  background: linear-gradient(
+    90deg,
+    rgba(239, 214, 186, 1) 0%,
+    rgba(235, 149, 73, 1) 33%,
+    rgba(255, 255, 255, 1) 100%
+  );
   height: 100%;
+  display: grid;
+  align-items: center;
+}
+.home {
   display: flex;
+  margin: 60px auto;
+  width: max-content;
+  gap: 70px;
+  justify-content: center;
 }
-.home-container > * {
-  flex: 1;
-}
-.left-half {
-  background-image: url("storefront.jpg");
-  background-position: center center;
-  background-size: cover;
-  background-attachment: fixed;
-}
-.right-half {
-  background-color: var(--background-blur-color);
-  backdrop-filter: blur(10px);
+
+.home-images {
+  position: relative;
+  height: 700px;
+  width: calc(400px + 74px);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 3rem;
-  color: white;
-  padding: 40px 40px;
+  justify-content: flex-end;
 }
+.home-images > * {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  border-radius: 2px;
+}
+.barista {
+  width: 400px;
+
+  height: auto;
+}
+.latte-pour {
+  width: 400px;
+  height: auto;
+  position: absolute;
+  left: 70px;
+  top: 0;
+}
+
 .home-subheading {
-  font-size: 1.8rem;
-  text-align: center;
-  font-weight: 400;
-}
-.home-heading {
-  font-size: 2.5rem;
-  text-align: center;
-  font-style: italic;
-}
-.home-logo {
-  width: 50%;
+  width: 35vw;
+  padding: 70px;
+  height: min-content;
   align-self: center;
+  border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+.home-subheading > * {
+  z-index: 999;
+}
+.home-subheading > *:first-child {
+  font-size: 3.3rem;
+}
+.home-subheading .home-h3 {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.home-subheading p {
+  font-size: 1.2rem;
+}
+.right-half {
+  position: relative;
+}
+.blob {
+  position: absolute;
 }
