--- a/src/css/home.css
+++ b/src/css/home.css
@@ -26,11 +26,26 @@
   display: grid;
   align-items: center;
 }
+.trans-bg {
+  position: fixed;
+  opacity: 0.1;
+}
+.coffee-transparent {
+  left: -90px;
+  top: -100px;
+}
+.mexico-outline {
+  width: 900px;
+  right: -14%;
+  top: 10%;
+}
+
 .home {
   display: flex;
   margin: 60px auto;
   width: max-content;
   gap: 70px;
+  align-content: center;
   justify-content: center;
 }
 
@@ -41,6 +56,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-self: center;
 }
 .home-images > * {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
@@ -62,30 +78,93 @@
 
 .home-subheading {
   width: 35vw;
-  padding: 70px;
+  padding: 40px 40px 0 40px;
   height: min-content;
   align-self: center;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
 }
 .home-subheading > * {
   z-index: 999;
 }
 .home-subheading > *:first-child {
   font-size: 3.3rem;
+  margin-bottom: 10px;
 }
 .home-subheading .home-h3 {
   font-size: 1.4rem;
   font-weight: 600;
+  margin-bottom: 4px;
 }
 .home-subheading p {
   font-size: 1.2rem;
 }
-.right-half {
-  position: relative;
+
+.home-social {
+  display: flex;
+  flex-direction: column;
+  font-size: 5rem;
+  justify-content: center;
+  gap: 1rem;
 }
-.blob {
-  position: absolute;
+.home-social a {
+  color: #ff4500;
+  z-index: 9996;
+}
+.order-catering {
+  background: linear-gradient(to bottom, #ff872b 5%, #ff4400 100%);
+  background-color: #ff872b;
+  border-radius: 5px;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 9px 24px;
+  text-decoration: none;
+  text-shadow: 0px 0px 0px #cc9f52;
+  width: max-content;
+  margin-top: 20px;
+}
+.order-catering:hover {
+  background: linear-gradient(to bottom, #ff4400 5%, #ff872b 100%);
+  background-color: #ff4400;
+}
+.order-catering:active {
+  position: relative;
+  top: 1px;
+}
+
+@media (max-width: 1180px) {
+  .home {
+    gap: 2rem;
+    flex-direction: column;
+  }
+  .home > *:nth-child(1) {
+    order: 1;
+  }
+  .home-social {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 30px 10px;
+  }
+  .home-subheading {
+    width: 80vw;
+  }
+  .coffee-transparent {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 796px) {
+  .mexico-outline {
+    right: -50%;
+  }
+  .home-subheading {
+    padding: 10px 10px 0 10px;
+  }
+  .home {
+    margin: 0px;
+  }
 }
