--- a/src/css/home.css
+++ b/src/css/home.css
@@ -110,7 +110,7 @@
 }
 .home-social a {
   color: #ff4500;
-  z-index: 9996;
+  z-index: 3000;
 }
 .order-catering {
   background: linear-gradient(to bottom, #ff872b 5%, #ff4400 100%);
@@ -165,6 +165,13 @@
     padding: 10px 10px 0 10px;
   }
   .home {
-    margin: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media (max-width: 510px) {
+  .home-subheading {
+    padding: 10px 0px 0px 0px;
+    min-width: 450px;
   }
 }
