--- a/src/css/home.css
+++ b/src/css/home.css
@@ -43,7 +43,7 @@
 .home {
   display: flex;
   margin: 60px auto;
-  width: max-content;
+  width: 100vw;
   gap: 70px;
   align-content: center;
   justify-content: center;
@@ -106,6 +106,7 @@
   flex-direction: column;
   font-size: 5rem;
   justify-content: center;
+  align-items: center;
   gap: 1rem;
 }
 .home-social a {
@@ -146,7 +147,7 @@
   }
   .home-social {
     flex-direction: row;
-    justify-content: space-between;
+    gap: 2rem;
     margin: 30px 10px;
   }
   .home-subheading {
@@ -172,6 +173,18 @@
 @media (max-width: 510px) {
   .home-subheading {
     padding: 10px 0px 0px 0px;
-    min-width: 450px;
+    /* min-width: 450px; */
+  }
+  .home-social {
+    width: 80%;
+    align-self: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .home-social i {
+    padding: 0;
+  }
+  .home-images {
+    display: none;
   }
 }
