--- a/src/css/restaurant.css
+++ b/src/css/restaurant.css
@@ -109,6 +109,7 @@
   background-color: #fff;
   padding: 40px;
   position: relative;
+  z-index: 8000;
 }
 
 .owner-headshot {
@@ -118,7 +119,7 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   border-left: 9px solid #795f37;
-  z-index: 9999;
+  z-index: 8000;
 }
 .owner-bio-words {
   background-color: #e2dedae0;
@@ -153,5 +154,27 @@
   .farm {
     right: -180px;
     height: 360px;
+  }
+}
+@media (max-width: 736px) {
+  .owner-bio-container {
+    flex-direction: column;
+  }
+  .farm {
+    height: 80%;
+    width: 900px;
+  }
+  .color-block {
+    font-size: 2rem;
+  }
+  .image-section {
+    height: 200px;
+  }
+}
+
+@media (max-width: 418px) {
+  .owner-headshot {
+    width: 100%;
+    height: auto;
   }
 }
