--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -68,7 +68,7 @@
 
 .contact-type {
   display: flex;
-  margin: 4% 40px;
+  margin: 7% auto;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -136,6 +136,10 @@
   font-weight: 600;
   padding: 20px;
 }
+.sign-up p {
+  text-align: center;
+  font-weight: normal;
+}
 .sign-up input {
   margin-top: 20px;
   width: 250px;
@@ -171,4 +175,27 @@
 #sign-up-btn:active {
   position: relative;
   top: 1px;
+}
+
+@media (max-width: 1070px) {
+  .social-media {
+    position: sticky;
+    top: auto;
+    flex-direction: row;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  .contact-type {
+    flex-direction: column;
+
+    gap: 1rem;
+  }
+  .contact-type > *:not(.by-email) {
+    border-bottom: 1px solid #efbf93;
+  }
+  .contact-type > * {
+    width: 60%;
+    align-self: center;
+    padding-bottom: 30px;
+  }
 }
