--- a/src/css/location.css
+++ b/src/css/location.css
@@ -39,6 +39,7 @@
 }
 .hours-container td:first-child {
   padding-right: 30px;
+  font-weight: 600;
 }
 .hours-container {
   grid-area: 2 / 1 / 3 / 2;
@@ -50,4 +51,42 @@
 .map-container iframe {
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 1162px) {
+  .location {
+    grid-template: max-content 1fr 1fr / 1fr;
+  }
+  .location > *:not(.map-container) {
+    text-align: center;
+    padding: 40px;
+  }
+  .address-container {
+    grid-area: 1 / 1 / 2 / 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .hours-container {
+    grid-area: 2 / 1 / 3 / 2;
+    width: 100%;
+  }
+  .hours-container table {
+    margin: auto;
+  }
+  .map-container {
+    grid-area: 3 / 1 / -1 / 2;
+  }
+}
+@media (max-width: 490px) {
+  .hours-container td:not(tr:last-child) {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.245);
+  }
+}
+
+@media (max-width: 371px) {
+  .hours-container td:first-child {
+    padding-right: 10px;
+    font-weight: 600;
+  }
 }
