--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,7 @@ body {
   background-attachment: fixed;
   grid-template: 60px 1fr 40px / 1fr;
   font-family: "Bai Jamjuree", sans-serif;
+  height: 100vh;
 }
 .no-bg {
   background-image: none;
