cleaned up code

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -68,7 +68,7 @@
 
 .contact-type {
   display: flex;
-  margin: 7% auto;
+  margin: 110px;
   justify-content: center;
   align-items: center;
   text-align: center;
