--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -68,7 +68,7 @@
 
 .contact-type {
   display: flex;
-  margin: 110px;
+  margin: 110px 30px;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -187,14 +187,14 @@
   }
   .contact-type {
     flex-direction: column;
-
+    margin: 40px 5px;
     gap: 1rem;
   }
   .contact-type > *:not(.by-email) {
     border-bottom: 1px solid #efbf93;
   }
   .contact-type > * {
-    width: 60%;
+    width: 70%;
     align-self: center;
     padding-bottom: 30px;
   }
